# serde-ext

./: Cargo.toml  README.md
serde-attributes/: Cargo.toml  README.md
serde-attributes/src/: lib.rs
serde-attributes/src/alias/: darling.rs  mod.rs  syn.rs
serde-attributes/src/rename/: darling.rs  mod.rs  syn.rs
serde-attributes/src/rename_all/: darling.rs  mod.rs  syn.rs
serde-attributes/tests/: integration_tests.rs
serde-attributes/tests/integration_tests/container_attrs/: helpers.rs  mod.rs
serde-attributes/tests/integration_tests/container_attrs/rename/: examples.rs  mod.rs
serde-attributes/tests/integration_tests/container_attrs/rename_all/: examples.rs  mod.rs
serde-attributes/tests/integration_tests/variant_attrs/: helpers.rs  mod.rs
serde-attributes/tests/integration_tests/variant_attrs/alias/: examples.rs  mod.rs
serde-aux-ext/: Cargo.toml  README.md
serde-aux-ext/src/: field_attributes.rs  lib.rs
serde-datetime/: Cargo.toml  README.md
serde-datetime/src/chrono/: ext.rs  lib_copy.rs  mod.rs  ts_float_microseconds.rs  ts_float_microseconds_option.rs  ts_microseconds.rs  ts_microseconds_option.rs
serde-enum-str/: Cargo.toml  README.md
serde-enum-str/demo-container-attr-crate/: Cargo.toml
serde-enum-str/demo-container-attr-crate/src/: main.rs
serde-enum-str/demo-no-std/: Cargo.toml
serde-enum-str/demo-no-std/src/: main.rs
serde-enum-str/demo-utils/: Cargo.toml
serde-enum-str/demo-utils/src/: lib.rs
serde-enum-str/src/: input.rs  lib.rs  output.rs  output_de.rs  output_ser.rs
serde-enum-str/tests/: std.rs  test.rs
serde-field-default/: Cargo.toml  README.md
serde-field-default/src/: chrono.rs  chrono_tz.rs  lib.rs  std.rs
serde-field-default/tests/: chrono.rs  chrono_tz.rs  std.rs
serde-field-with/: Cargo.toml  README.md
serde-field-with/src/: lib.rs  to_and_from_string.rs  to_and_from_string_option.rs
serde-field-with/tests/: to_and_from_string.rs
serde-rename-rule/: Cargo.toml  README.md
serde-rename-rule/src/: lib.rs
