[package]
name = "serde-aux-ext"
version = "0.2.1"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2024"
description = "serde-aux extension"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/serde-ext"
homepage = "https://github.com/bk-rs/serde-ext"
documentation = "https://docs.rs/serde-aux-ext"
keywords = []
categories = []
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = { version = "1" }
