[package]
name = "serde-datetime"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "serde serializer/deserializer for DateTime"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/serde-datetime"
homepage = "https://github.com/bk-rs/serde-datetime"
documentation = "https://docs.rs/serde-datetime"
keywords = []
categories = []
readme = "README.md"

[dependencies]
serde = { version = "1.0" }
chrono = { version = "<=0.4.19", default-features = false, features = ["clock"] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
