[package]
name = "serde-datetime"
version = "0.2.2"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2024"
description = "serde serializer/deserializer for DateTime"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/serde-ext"
homepage = "https://github.com/bk-rs/serde-ext"
documentation = "https://docs.rs/serde-datetime"
keywords = []
categories = []
readme = "README.md"

[dependencies]
serde = { version = "1" }
chrono = { version = ">=0.4.20", default-features = false, features = [
    "clock",
] }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
