[package]
name = "serde-enum-str"
version = "0.2.4"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "Serialize and deserialize enum string"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/serde-enum-str"
homepage = "https://github.com/bk-rs/serde-enum-str"
documentation = "https://docs.rs/serde-enum-str"
keywords = []
categories = []
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0", default-features = false }
quote = { version = "1.0", default-features = false }
syn = { version = "1.0", default-features = false, features = ["parsing", "proc-macro", "derive"] }
darling = { version = "0.13", default-features = false }
serde-attributes = { version = "0.1.1", default-features = false, features = ["attr-alias", "attr-rename", "attr-rename-all", "with-darling"] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
