[package]
name = "serde-enum-str"
version = "0.2.5"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Serialize and deserialize enum string"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/serde-ext"
homepage = "https://github.com/bk-rs/serde-ext"
documentation = "https://docs.rs/serde-enum-str"
keywords = []
categories = []
readme = "README.md"
rust-version = "1.58.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
syn = { version = "1", default-features = false, features = ["parsing", "proc-macro", "derive"] }
darling = { version = "0.14", default-features = false }
serde-attributes = { version = "0.1.2", default-features = false, features = ["attr-alias", "attr-rename", "attr-rename-all", "with-darling"], path = "../serde-attributes" }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

[package.metadata."docs.rs"]
all-features = true