[package]
name = "serde-enum-str"
version = "0.5.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2024"
description = "Serialize and deserialize enum string"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/serde-ext"
homepage = "https://github.com/bk-rs/serde-ext"
documentation = "https://docs.rs/serde-enum-str"
keywords = []
categories = []
readme = "README.md"

[lib]
proc-macro = true

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]

std = ["serde-attributes/std"]

[dependencies]
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
syn = { version = "2", default-features = false, features = [
    "parsing",
    "proc-macro",
    "derive",
] }
darling = { version = "0.23", default-features = false }
serde-attributes = { version = "0.3", default-features = false, features = [
    "attr-alias",
    "attr-rename",
    "attr-rename-all",
    "with-darling",
], path = "../serde-attributes" }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
