[package]
name = "serde-field-default"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Serde field default attribute"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/serde-ext"
homepage = "https://github.com/bk-rs/serde-ext"
documentation = "https://docs.rs/serde-field-default"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = []
alloc = []

[dependencies]
chrono = { version = "0.4", default-features = false, optional = true }
chrono-tz = { version = "0.6", default-features = false, optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

chrono = { version = "0.4", default-features = false, features = ["serde"] }

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
skip_feature_sets = [
    ["alloc"],
    ["chrono"],
    ["chrono-tz"],
]
