[package]
name = "serde-field-with"
version = "0.2.1"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2024"
description = "Serde field with attribute"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/serde-ext"
homepage = "https://github.com/bk-rs/serde-ext"
documentation = "https://docs.rs/serde-field-with"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = ["alloc", "serde/std"]
alloc = ["serde/alloc"]

[dependencies]
serde = { version = "1", default-features = false }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

chrono-tz = { version = "0.10" }

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
skip_feature_sets = [["alloc"]]
