[package]
name = "serde-rename-rule"
version = "0.2.1"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Serde RenameRule"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/serde-ext"
homepage = "https://github.com/bk-rs/serde-ext"
documentation = "https://docs.rs/serde-rename-rule"
keywords = []
categories = []
readme = "README.md"
rust-version = "1.58.0"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = []

[dependencies]
